--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="zx" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>This is me</title>
   </head>
   <body>
-    <center><h1>David Martinez</h1></center>
+  <center><h1>David Martinez </h1></center>
+    <center> <img src="davidpic" alt="me"></center>
   </body>
 </html>
