--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>This is me</title>
   </head>
-  <body>
-  <center><h1>David Martinez </h1></center>
+  <body style="background-color:powderblue;">
+  <center><h1 style="background-color:DodgerBlue;">David Martinez</h1></center>
     <center> <img src="davidpic" alt="me"></center>
-  </body>
+    <center><p>I am very excited to begin my journey in to the tech world. I love to learn and i am looking forward to the challenge.</p><center
 </html>
