--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body style="background-color:powderblue;">
   <center><h1 style="background-color:DodgerBlue;">David Martinez</h1></center>
-    <center> <img src="davidpic" alt="me"></center>
+    <center> <img src="images/FB_IMG_1528559914721.jpg" alt="me"></center>
     <center><p>I am very excited to begin my journey in to the tech world. I love to learn and i am looking forward to the challenge.</p><center
 </html>
