--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body style="background-color:powderblue;">
   <center><h1 style="background-color:DodgerBlue;">David Martinez</h1></center>
     <center> <img src="images/FB_IMG_1528559914721.jpg" alt="me"></center>
-    <center><p>I am very excited to begin my journey in to the tech world. I love to learn and i am looking forward to the challenge.</p><center
+    <center><p>I am very excited to begin my journey in to the tech world. I love to learn and i am looking forward to the challenge.</p><center>
+</body>
 </html>
